crates/sui-package-resolver/src/snapshots/sui_package_resolver__tests__system_package_invalidation.snap
---
source: crates/sui-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
struct 0x1::m::T1 {
    x: u256,
}
