crates/sui-package-resolver/src/snapshots/sui_package_resolver__tests__upgraded_package_non_defining_id.snap
---
source: crates/sui-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
struct 0xa0::m::T1<0xa1::m::T3, 0xa0::m::T0> {
    a: address,
    p: struct 0xa1::m::T3 {
        y: u16,
    },
    q: vector<struct 0xa0::m::T0 {
        b: bool,
        v: vector<struct 0xa0::m::T1<0xa0::m::T2, u128> {
            a: address,
            p: struct 0xa0::m::T2 {
                x: u8,
            },
            q: vector<u128>,
        }>,
    }>,
}
